<?xml version="1.0"?>
<package format="3">
  <name>action_exception_test</name>
  <version>0.0.0</version>
  <description>Nodes to test action callback groups</description>
  <maintainer email="joe.schornak@gmail.com">Joseph Schornak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
